force-app/main/default/objects/Account/fields/Favorite_COlor__c.field-meta.xml
<CustomField>
    <fullName>Favorite_COlor__c</fullName>
    <label>Favorite COlor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>