force-app/main/default/objects/Account/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <label>Field 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>