force-app/main/default/objects/Account/fields/Field_3__c.field-meta.xml
<CustomField>
    <fullName>Field_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field 3</label>
    <type>Checkbox</type>
</CustomField>