force-app/main/default/objects/Account/fields/my_checkbox__c.field-meta.xml
<CustomField>
    <fullName>my_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My checkbox</label>
    <type>Checkbox</type>
</CustomField>